--- a/src/index.scss
+++ b/src/index.scss
@@ -12,12 +12,31 @@ a {
     text-decoration: none;
 }
 
+.hide {
+    display: none;
+}
+
+.notif {
+    color: #fff;
+    background-color: rgb(49, 49, 49);
+    padding: 10px 15px;
+    top: -50px;
+    position: absolute;
+    border-radius: 3px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 14px;
+    right: 0;
+    left: 0;
+}
+
 body {
     background-color: #C4C4C4;
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
+    overflow: hidden;
 }
 
 header {
