--- a/src/pages/Auth/Auth.module.scss
+++ b/src/pages/Auth/Auth.module.scss
@@ -1,10 +1,21 @@
 .overlay {
+    z-index: 5;
     position: absolute;
     display: flex;
     justify-content: center;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
+}
+
+.hide {
+    display: none;
+}
+
+.closeWrapper {
+    position: absolute;
+    top: 3%;
+    right: 5%;
 }
 
 .container {
@@ -117,7 +128,7 @@
         line-height: 19px;
         text-align: center;
         
-        a {
+        span {
             padding-left: 10px;
             color: #1877F2;
             font-weight: 600;
