--- a/src/index.scss
+++ b/src/index.scss
@@ -113,6 +113,7 @@ header {
         }
 
         .categories-list {
+            margin-top: 20px;
             display: flex;
             flex-wrap: wrap;
 
