--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -1,26 +1,28 @@
 .overlay {
     z-index: 5;
     position: absolute;
-    display: flex;
+    display: none;
     justify-content: center;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
 }
 
-.hide {
-    display: none;
+.visible {
+    display: flex;
 }
 
 .closeWrapper {
     position: absolute;
     top: 3%;
     right: 5%;
+    cursor: pointer;
 }
 
 .container {
     max-width: 250px;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .modal {
@@ -79,6 +81,10 @@
             text-transform: uppercase;
             cursor: pointer;
         }
+
+        .signUpBtn {
+            padding: 16px 48px;
+        }
     }
 
     .otherLogin {
@@ -132,6 +138,7 @@
             padding-left: 10px;
             color: #1877F2;
             font-weight: 600;
+            cursor: pointer;
         }
     }
 }
