--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -102,11 +102,14 @@
 
         .optionLogin {
             display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
             align-items: center;
             justify-content: space-between;
         }
 
         .loginWith {
+            margin-bottom: 10px;
             padding: 15px 10px;
             font-weight: 600;
             width: 120px;
@@ -124,6 +127,14 @@
                 color: #A8A8A8;
                 background-color: #fff;
                 border: 0.5px solid #E0E0E0;
+            }
+
+            &:nth-child(3) {
+                background-color: #c337e0;
+            }
+
+            &:nth-child(4) {
+                background-color: #28a0d9;
             }
         }
     }
