--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -7,10 +7,12 @@
     z-index: 1;
     position: absolute;
     margin: 2%;
-    background: rgba(255, 255, 255, 0.8);
+    background: rgb(255, 255, 255);
     border-radius: 10px;
     max-width: 370px;
     padding: 20px;
+    max-height: 580px;
+    overflow: hidden;
 
     .selectList {
         position: relative;
@@ -60,5 +62,55 @@
             display: flex;
             flex-wrap: wrap;
         }
+    }
+
+    .aboutPlace {
+        margin-top: 20px;
+
+        .locate {
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+
+            .locateBtn {
+                background-color: #f5f5f5;
+                width: 100%;
+                text-align: center;
+                border-top-right-radius: 5px;
+                border-bottom-right-radius: 5px;
+                padding: 10px 0;
+                font-weight: 600;
+                font-size: 14px;
+                line-height: 19px;
+
+                &:hover {
+                    color: #fff;
+                    background-color: #2f75fb;
+                }
+
+                &:first-child {
+                    border-top-right-radius: 0px;
+                    border-bottom-right-radius: 0px;
+                    border-top-left-radius: 5px;
+                    border-bottom-left-radius: 5px;
+                }
+            }
+
+            .activeLocate {
+                background-color: #2ECC6E;
+                color: #fff;
+            }
+        }
+
+        .places {
+            width: 100%;
+            background-color: #f5f5f5;
+            border-radius: 5px;
+            padding: 20px;
+            margin-top: 20px;
+            overflow: hidden;
+            max-height: 185px;
+        }
+
     }
 }
