--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -14,6 +14,80 @@
     max-height: 580px;
     overflow: hidden;
 
+    form {
+        margin-top: 25px;
+
+        p {
+            font-weight: 500;
+            color: #1C1D22;
+            line-height: 16px;
+            display: flex;
+            flex-direction: column;
+            font-weight: 600;
+            
+            span {
+                padding-left: 15px;
+            }
+
+            input {
+                margin-top: 5px;
+                padding: 18px 0px 18px 14px;
+                background: #E8E8E8;
+                border-radius: 4px;
+                margin-bottom: 15px;
+                border: none;
+
+                &:focus {
+                    outline: none;
+                    border: 0.5px solid #1877F2;
+                    color: #5B5B5B;
+                }
+
+                &::placeholder {
+                    font-size: 14px;
+                    line-height: 16px;
+                    color: #5B5B5B;
+                }
+            }
+
+            textarea {
+                margin-top: 5px;
+                padding: 18px 0px 18px 14px;
+                background: #E8E8E8;
+                border-radius: 4px;
+                margin-bottom: 15px;
+                width: 330px;
+                height: 125px;
+                resize: none;
+                border: none;
+
+                &:focus {
+                    outline: none;
+                    border: 0.5px solid #1877F2;
+                    color: #5B5B5B;
+                }
+
+                &::placeholder {
+                    font-size: 14px;
+                    line-height: 16px;
+                    color: #5B5B5B;
+                }
+            }
+        }
+
+        button {
+            background: #2ECC6E;
+            border-radius: 9px;
+            border: none;
+            font-weight: 600;
+            color: #FFFFFF;
+            padding: 16px 100px;
+            margin-top: 10px;
+            text-transform: uppercase;
+            cursor: pointer;
+        }
+    }
+
     .selectList {
         position: relative;
         select {
@@ -108,9 +182,13 @@
             border-radius: 5px;
             padding: 20px;
             margin-top: 20px;
-            overflow: hidden;
+            overflow: scroll;
             max-height: 185px;
         }
 
     }
+}
+
+.scroll {
+    overflow: scroll;
 }
