--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -9,7 +9,7 @@
     margin: 2%;
     background: rgb(255, 255, 255);
     border-radius: 10px;
-    max-width: 370px;
+    max-width: 380px;
     padding: 20px;
     max-height: 580px;
     overflow: hidden;
@@ -30,7 +30,7 @@
             }
 
             input {
-                margin-top: 5px;
+                margin-top: 6px;
                 padding: 18px 0px 18px 14px;
                 background: #E8E8E8;
                 border-radius: 4px;
@@ -55,8 +55,6 @@
                 padding: 18px 0px 18px 14px;
                 background: #E8E8E8;
                 border-radius: 4px;
-                margin-bottom: 15px;
-                width: 330px;
                 height: 125px;
                 resize: none;
                 border: none;
@@ -69,6 +67,7 @@
 
                 &::placeholder {
                     font-size: 14px;
+                    font-family: 'Open Sans', sans-serif;
                     line-height: 16px;
                     color: #5B5B5B;
                 }
@@ -76,15 +75,23 @@
         }
 
         button {
+            width: 323px;
             background: #2ECC6E;
-            border-radius: 9px;
+            border-radius: 5px;
             border: none;
             font-weight: 600;
             color: #FFFFFF;
-            padding: 16px 100px;
+            padding: 16px 0px;
             margin-top: 10px;
             text-transform: uppercase;
             cursor: pointer;
+        }
+
+        .pointOnMap {
+            font-size: 12px;
+            font-weight: 600;
+            margin-bottom: 15px;
+            margin-top: 0;
         }
     }
 
@@ -190,5 +197,5 @@
 }
 
 .scroll {
-    overflow: scroll;
+    overflow-y: scroll;
 }
