--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -244,7 +244,7 @@ form {
         border-radius: 5px;
         padding: 20px;
         margin-top: 20px;
-        overflow: scroll;
+        overflow-y: scroll;
         max-height: 185px;
     }
 
