--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -62,6 +62,11 @@
                 }
             }
         }
+
+        .cityEmpty {
+            text-align: center;
+            margin-top: 20%;
+        }
     }
     
     .rotateArrow {
