--- a/src/index.scss
+++ b/src/index.scss
@@ -518,8 +518,7 @@ header {
     height: 100%;
     width: 22%;
     background-color: #fff;
-    padding-left: 15px;
-    padding-top: 15px;
+    padding: 20px;
     position: relative;
 
     .filtersTitle {
@@ -530,12 +529,11 @@ header {
     }
 
     .filter {
-      margin-top: 25px;
-      color: #333;
-      text-transform: uppercase;
-
-      p {
+      .filterCityText {
         margin-bottom: 10px;
+        margin-top: 25px;
+        color: #333;
+        text-transform: uppercase;
       }
     }
 
