feat: regex from fields

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -195,6 +195,7 @@ form {
     }
 
     .compayClose {
+        cursor: pointer;
         position: absolute;
         right: 20px;
         top: 12px;
