--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -39,7 +39,7 @@
         overflow-y: scroll;
         width: 100%;
         max-height: 150px;
-        height: 150px;
+        height: auto;
         background-color: #fff;
         box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.12);
 
@@ -65,7 +65,7 @@
 
         .cityEmpty {
             text-align: center;
-            margin-top: 20%;
+            padding: 25px 0;
         }
     }
     
