--- a/src/index.scss
+++ b/src/index.scss
@@ -574,20 +574,40 @@ header {
     .compnayContainer {
       overflow-x: hidden;
       overflow-y: scroll;
+      flex-wrap: wrap;
       height: 50%;
       background-color: #f4f3f3;
       width: auto;
       padding: 50px;
       display: flex;
-      flex-direction: column;
+      align-items: center;
 
       .catalogCompanyCard {
-        padding: 20px;
         margin-bottom: 20px;
         margin-right: 20px;
+        border-radius: 5px;
+        overflow: hidden;
+        max-width: 228px;
+        max-height: 300px;
         background-color: #fff;
         width: 100%;
         max-height: 300px;
+
+        .catalogCompanyContent {
+          padding: 20px;
+        }
+
+        .catalogImageWrapper {
+          width: 100%;
+          height: 200px;
+          overflow: hidden;
+
+          img {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+          }
+        }
 
         .companyCardTitle {
           font-weight: 600;
@@ -595,7 +615,7 @@ header {
         }
 
         .compnayTake {
-          margin-top: 5px;
+          margin-top: 15px;
           color: #101010;
           font-weight: 600;
 
