--- a/src/components/Toggle/Toggle.module.scss
+++ b/src/components/Toggle/Toggle.module.scss
@@ -38,7 +38,7 @@
                 transition: .4s ease;
                 height: 20px;
                 width: 40px;
-                border: 1px solid #e4e4e4;
+                border: 1px solid #d9d9d9;
                 cursor: pointer;
                 border-radius: 60px;
 
