--- a/src/components/CardCompany/CardCompany.module.scss
+++ b/src/components/CardCompany/CardCompany.module.scss
@@ -160,4 +160,55 @@
             text-align: left;
         }
     }
+
+    .workTimeToday {
+        border-top: 0.5px solid #ddd;
+        padding: 15px 0;
+        padding-left: 20px;
+        font-size: 16px;
+        font-weight: 600;
+        color: #444;
+    }
+
+    .table {
+        display: flex;
+        background-color: #EEE;
+    }
+    .tableDay {
+        display: flex;
+        flex-direction: column;
+        text-align: center; 
+        padding: 7px; 
+
+        .tableDayTitle {
+            background-color: #fff;
+            padding: 10px;
+            border-radius: 5px;
+        }
+
+        .tableDayTime {
+            margin-top: 5px;
+            font-size: 11px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .tableDayActive {
+            background-color: #2F75FB;
+            color: #fff;
+        }
+    }
+
+    .coffeeTime {
+        padding: 15px 0;
+        padding-left: 20px;
+        font-size: 16px;
+        font-weight: 600;
+        color: #444;
+    }
+}
+
+.small {
+    font-size: 14px;
+    font-weight: normal;
 }
